1.8
* Xmpp lib updated
* New "findsms"/"fs" command
* XHTML formatting added
* Add consolas font for shell commands results
* Execute shell commands in new threads
* Enhance sent/delivered SMS notifications

1.7
* German language added
* Localization preference added
* GTalkSMS can manage SMS thread as conversation per contact 

1.6
* Add french language
* Add integration with Tasker
* Fix some bugs

1.5
* Add remote keyboard feature, with "write" command
* Autostart/stop GTalkSMS with charger connection
* Add "cmd" command to execute shell instructions

1.4
* MainService refactoring to avoid UI locks
* Avoid GPS location notification with the same value

1.3
* Add about panel with donors list & change logs
* Split preferences in three panels
* Open http links with GTalkSMS by sending urls

1.2
* Add send clipboard (Phone => PC) by command & main screen button
* Add battery level in presence message
* Add exit command to remotely stop GTalkSMS
* Fix annoying multiple incoming call notification
* Stop ringing & GPS localization when loosing XMPP connection

1.1
* Add connection status icon in application main panel

1.0
* Add "markAsRead" command and mark SMS as read on "reply" command
* Add "batt" command to show battery status
* Add preference to hide status icon in notification bar

0.4
* Fix contact search using phone numbers
* Add battery notification interval preference (1,5,10,20) in percent
* Send message on closing if connection notifications are enabled
* Add calls commands that shows call logs

0.3
* Add command "sms" without parameter that shows last SMS from everyone
* Optimize SMS read by limiting search results
* Add Widget support to XMPP connection

0.2
* Recode ContactsManager to manage all accounts (GMail, Exchange) with SDK 2.0
* Adapt SmsManager for ContactsManager compatibility
* Set min SDK version to 2.0 ECLAIR
* Fix ForceClose on XMPP disconnection
* Add current version in the main window

0.1
* Create GTalkSMS from TalkMyPhone