@@ -7,6 +7,10 @@
     <string name="pref_app_start_at_boot_help">Aktivieren um GTalkSMS bei Systemstart zu starten</string>
     <string name="pref_app_start_on_power_connected">Wenn Ladegerät eingesteckt</string>
     <string name="pref_app_start_on_power_connected_help">Startet GTalkSMS automatisch wenn ein Ladegerät angeschlossen wird</string>
+    <string name="pref_app_start_on_wifi_connected">WLAN verbunden</string>
+    <string name="pref_app_start_on_wifi_connected_help">Startet GTalkSMS automatisch wenn eine WLAN Verbindung existiert</string>
+    <string name="pref_app_stop_on_wifi_disconnected">WLAN getrennt</string>
+    <string name="pref_app_stop_on_wifi_disconnected_help">Beendet  GTalkSMS automatisch wenn keine WLAN Verbindung existiert</string>
     <string name="pref_app_stop_on_power_disconnected">Wenn Ladegerät entfernt wird</string>
     <string name="pref_app_stop_on_power_disconnected_help">Stop GTalkSMS wenn das Ladegerät entfernt wird</string>
     <string name="pref_app_show_status_icon">Zeige Icon</string>
